# karana-os

./: .gitignore  AI_ANDROID_INTEGRATION.md  AI_IMPLEMENTATION_STATUS.md  ANDROID_APPS_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_MASTER.md  DEVELOPMENT_ROADMAP.md  ENHANCEMENT_PLAN.md  ENHANCEMENT_PLAN_V2.md  HARDWARE_PLAN.md  INTELLIGENT_SYSTEM_GUIDE.md  ORACLE_AI_INTELLIGENCE_PLAN.md  ORACLE_AI_STATUS.md  ORACLE_FIX_COMPLETE.md  PLAN_BACKEND_INTEGRATION.md  PLAN_HARDWARE_GLASSES.md  PLAN_MINIMAL_MANIFEST.md  PLAN_MULTIMODAL_INPUT.md  PLAN_ORACLE_VEIL.md  PLAN_SPATIAL_AR_GLASSES.md  PLAN_ZK_INTENT_CHAIN.md  README.md  SIMPLE_GUIDE.md  index.html  install.sh  start_karana.sh  test_oracle_tools.sh  test_ws.py
karana-core/: Cargo.toml  PLAN.md  PLAN_AI.md  PLAN_AR_GLASSES.md  README.md  bazaar-seed.json  node_wallet.enc  output.txt
karana-core/examples/: android_apps.rs  full_e2e_test.rs  full_integration_test.rs  full_stack_demo.rs  glasses_demo.rs  glasses_gui.rs  glasses_interactive.rs  glasses_simulator.rs  glasses_visual_demo.rs  intelligence_demo.rs  oracle_demo.rs  scenario_runner.rs  simulator_demo.rs  test_system_awareness.rs  voice_demo.rs  web_simulator.rs
karana-core/models/: phi3-mini.q4.gguf
karana-core/src/: ar_bridge.rs  boot.rs  camera.rs  celestia.rs  chain.rs  context.rs  economy.rs  glasses.rs  hud.rs  identity.rs  ipc.rs  learning.rs  lib.rs  main.rs  memory.rs  monad.rs  multimodal.rs  net.rs  notifications.rs  onboarding.rs  oracle.rs  proactive.rs  runtime.rs  storage.rs  timer.rs  types.rs  ui.rs  vigil.rs  voice.rs  voice_pipeline.rs  wallet.rs
karana-core/src/accessibility/: cognitive.rs  hearing.rs  magnifier.rs  mod.rs  motor.rs  screen_reader.rs  vision.rs
karana-core/src/ai/: adaptive_loader.rs  agentic.rs  dialogue.rs  intent_scheduler.rs  memory.rs  mod.rs  optimization.rs  query_router.rs  react_agent.rs  reasoning.rs
karana-core/src/ai_layer/: action_executor.rs  context_manager.rs  dialogue.rs  entities.rs  error_recovery.rs  intent.rs  mod.rs  nlu.rs  query_understanding.rs  reasoning.rs  response.rs  slot_filler.rs
karana-core/src/api/: handlers.rs  intent.rs  mod.rs  routes.rs  server.rs  state.rs  types.rs
karana-core/src/app_ecosystem/: android_container.rs  app_store.rs  intent_protocol.rs  mod.rs  native_apps.rs
karana-core/src/apps/: manifest.rs  mod.rs  permissions.rs  runtime.rs  sandbox.rs
karana-core/src/ar/: anchors.rs  content.rs  lighting.rs  mesh.rs  mod.rs  objects.rs  occlusion.rs  overlays.rs  plane.rs  renderer.rs  session.rs  shaders.rs  tracking.rs
karana-core/src/ar_tabs/: browser.rs  interaction.rs  manager.rs  mod.rs  render.rs  tab.rs
karana-core/src/assistant/: ai_oracle.rs  commands.rs  context.rs  conversation.rs  enhanced_vad.rs  mod.rs  recognition.rs  state_context.rs  synthesis.rs  tool_registry.rs  tts_service.rs  voice_handler.rs
karana-core/src/audio/: hrtf.rs  listener.rs  mixer.rs  mod.rs  reverb.rs  source.rs
karana-core/src/audio_pipeline/: analysis.rs  capture.rs  effects.rs  mod.rs  output.rs  spatial.rs
karana-core/src/battery/: battery.rs  mod.rs  performance.rs  thermal.rs
karana-core/src/capabilities/: mod.rs
karana-core/src/capability/: mod.rs  traits.rs
karana-core/src/collab/: collaborative_tabs.rs  mod.rs  presence.rs  shared_anchors.rs  sync.rs
karana-core/src/diagnostics/: health.rs  metrics.rs  mod.rs  profiler.rs  watchdog.rs
karana-core/src/distributed/: compute_node.rs  distributed_inference.rs  edge_cloud.rs  mod.rs  model_partitioning.rs  workload_splitter.rs
karana-core/src/drivers/: audio_driver.rs  camera_driver.rs  connectivity_driver.rs  display_driver.rs  input_driver.rs  mod.rs  sensor_driver.rs
karana-core/src/event_bus/: core.rs  mod.rs  router.rs
karana-core/src/feature_flags/: mod.rs
karana-core/src/gaze/: analysis.rs  calibration.rs  interaction.rs  mod.rs  tracker.rs
karana-core/src/gesture/: ar_interaction.rs  detector.rs  finger_tracking.rs  gaze_gestures.rs  gestures.rs  hand.rs  haptics.rs  head_gestures.rs  learning.rs  micro_gestures.rs  mod.rs  recognizer.rs
karana-core/src/gov/: mod.rs
karana-core/src/hal/: audio.rs  camera.rs  connectivity.rs  display.rs  input.rs  mod.rs  power.rs  sensors.rs
karana-core/src/haptics/: actuator.rs  controller.rs  mod.rs  notification.rs  patterns.rs  spatial.rs
karana-core/src/hardware/: haptic.rs  input.rs  mod.rs  power.rs
karana-core/src/installer/: mod.rs
karana-core/src/intelligence/: app_intelligence.rs  decisions.rs  mod.rs  orchestrator.rs  predictor.rs  router.rs  workflows.rs
karana-core/src/interop/: mod.rs
karana-core/src/ledger/: checkpointing.rs  mod.rs  optimizer.rs  pruning.rs
karana-core/src/market/: mod.rs
karana-core/src/ml/: gaze.rs  hands.rs  inference.rs  mod.rs  models.rs  pipeline.rs  runtime.rs  speech.rs  vision.rs
karana-core/src/navigation/: ar_nav.rs  location.rs  maps.rs  mod.rs  poi.rs  routing.rs
karana-core/src/network/: mod.rs  ws_server.rs
karana-core/src/networking/: bluetooth.rs  cloud.rs  discovery.rs  mod.rs  sync.rs  wifi.rs
karana-core/src/notifications_v2/: channel.rs  display.rs  filter.rs  mod.rs  summary.rs
karana-core/src/oracle/: actions.rs  cache.rs  command.rs  context.rs  conversation.rs  embeddings.rs  intent.rs  knowledge_base.rs  knowledge_graph.rs  knowledge_manager.rs  knowledge_sync.rs  manifest.rs  mod.rs  sense.rs  swarm_knowledge.rs  tab_commands.rs  tool_bridge.rs  universal.rs  use_cases.rs  veil.rs  web_search.rs
karana-core/src/orchestrator/: async_monad.rs  mod.rs  scheduler.rs
karana-core/src/ota/: downloader.rs  installer.rs  manifest.rs  mod.rs  rollback.rs  version.rs
karana-core/src/performance/: cpu.rs  framerate.rs  memory.rs  mod.rs  quality.rs  scheduler.rs
karana-core/src/pkg/: mod.rs
karana-core/src/power/: battery.rs  estimator.rs  governor.rs  mod.rs  profiles.rs  thermal.rs
karana-core/src/privacy/: audit.rs  (+8 more)
karana-core/tests/: blockchain_test.rs  chain_test.rs  oracle_veil_test.rs  universal_oracle.rs  use_cases_test.rs
(+283 files in other folders)
