[package]
name = "karana-core"
version = "0.1.0"
edition = "2024"
default-run = "karana-core"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-snark = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["r1cs"] }
hex = "0.4.3"
sha2 = "0.10.9"
wasmtime = "39.0.1"
rand = { version = "0.8", features = ["std", "std_rng"] }
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "kad", "noise", "tcp", "yamux", "macros", "mdns"] }
tokio = { version = "1", features = ["full"] }
actix = "0.13.3"
actix-rt = "2.9.0"
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
tokenizers = "0.22.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
alloy-primitives = { version = "1.4.1", features = ["serde"] }
rocksdb = "0.24.0"
celestia-rpc = "0.15.0"
celestia-types = "0.17.0"
lru = "0.12.5"
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-logger = "0.17.4"
log = "0.4.28"
clap = { version = "4.5.53", features = ["derive"] }
sysinfo = "0.37.2"
symphonia = { version = "0.5.5", features = ["all"] }
evdev = "0.12.1"
image = "0.25.9"
uuid = { version = "1.18.1", features = ["v4"] }
env_logger = "0.11.8"
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json"] }
base64 = "0.22.1"
hound = "3.5"
term_size = "0.3.2"
ctrlc = "3.5.1"
ed25519-dalek = "2.2.0"
bip39 = { version = "2.2.0", features = ["rand"] }
zeroize = "1.8.2"
aes-gcm = "0.10.3"
bs58 = "0.5.1"
dirs = "6.0.0"
getrandom = "0.3.4"

# Camera support (v4l2 for Linux)
rscam = { version = "0.5.5", optional = true }

[features]
default = []
v4l2 = ["dep:rscam"]

[profile.dev.package."*"]
opt-level = 3
