[package]
name = "karana-core"
version = "0.1.0"
edition = "2024"
default-run = "karana-core"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-snark = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["r1cs"] }
hex = "0.4.3"
sha2 = "0.10.9"
wasmtime = "39.0.1"
rand = { version = "0.8", features = ["std", "std_rng"] }
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "kad", "noise", "tcp", "yamux", "macros", "mdns"] }
tokio = { version = "1", features = ["full"] }
actix = "0.13.3"
actix-rt = "2.9.0"
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
tokenizers = "0.22.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
alloy-primitives = { version = "1.4.1", features = ["serde"] }
rocksdb = "0.24.0"
celestia-rpc = "0.15.0"
celestia-types = "0.17.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
lru = "0.12.5"
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-logger = { version = "0.17.4", features = ["crossterm"] }
log = "0.4.28"
env_logger = "0.11"
chrono = "0.4"
symphonia = { version = "0.5.3", features = ["all"] }
cpal = "0.15"
hound = "3.5.1"
evdev = "0.12.1"
image = "0.24.7"
sysinfo = "0.30.5"
term_size = "0.3"
ctrlc = "3.4"
libc = "0.2"
# Camera support (v4l2 for Linux)
rscam = { version = "0.5.5", optional = true }
# Ed25519 signatures for wallet
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
bip39 = "2.2.0"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
bs58 = "0.5.1"
zeroize = { version = "1.8", features = ["derive"] }
async-trait = "0.1"
bincode = "1.3"
zstd = "0.13"

# Modern GUI for simulator
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", features = ["image"], optional = true }

# HTTP API server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
nalgebra = "0.33"
regex = "1.10"

[features]
default = []
v4l2 = ["rscam"]
gui = ["eframe", "egui", "egui_extras"]

[[example]]
name = "glasses_gui"
required-features = ["gui"]

[profile.dev.package."*"]
opt-level = 3
